Initial project config

--- a/_crude/download.html
+++ b/_crude/download.html
@@ -22,25 +22,17 @@
     />
 
     <!-- pe-icon-7 CSS-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/pe-icon-7-stroke.css"
-    />
+    <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css" />
 
     <!-- Waves effect CSS-->
-    <link rel="stylesheet" type="text/css" href="assets/css/waves.css" />
+    <link rel="stylesheet" type="text/css" href="css/waves.css" />
 
     <!-- Bootstrap CSS-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/colors/red.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="css/colors/red.css" />
   </head>
 
   <body
@@ -49,7 +41,6 @@
     data-hijacking="on"
     data-animation="scaleDown"
   >
-    <div id="root"></div>
     <!-- START NAVBAR -->
     <nav
       class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark"
@@ -63,7 +54,7 @@
     <section
       class="section bg-home home-half"
       id="home"
-      data-image-src="assets/images/bg-home.jpg"
+      data-image-src="images/bg-home.jpg"
     >
       <div class="bg-overlay"></div>
       <div class="display-table">
@@ -93,19 +84,19 @@
         <div class="waves-shape shape-one">
           <div
             class="wave wave-one"
-            style="background-image: url('assets/images/wave-shape/wave1.png')"
+            style="background-image: url('images/wave-shape/wave1.png')"
           ></div>
         </div>
         <div class="waves-shape shape-two">
           <div
             class="wave wave-two"
-            style="background-image: url('assets/images/wave-shape/wave2.png')"
+            style="background-image: url('images/wave-shape/wave2.png')"
           ></div>
         </div>
         <div class="waves-shape shape-three">
           <div
             class="wave wave-three"
-            style="background-image: url('assets/images/wave-shape/wave3.png')"
+            style="background-image: url('images/wave-shape/wave3.png')"
           ></div>
         </div>
       </div>
@@ -154,15 +145,15 @@
     <!--START FOOTER-->
 
     <!-- JAVASCRIPTS -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/scrollspy.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/scrollspy.min.js"></script>
     <!-- Sticky Header -->
-    <script src="assets/js/jquery.sticky.js"></script>
+    <script src="js/jquery.sticky.js"></script>
     <!-- Waves Effect js -->
-    <script src="assets/js/waves.min.js"></script>
+    <script src="js/waves.min.js"></script>
     <!-- Jquery easing -->
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
